--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,8 +1,13 @@
 {
   "name": "tight-jail",
   "version": "0.2.0",
-  "description": "Execute arbitrary JavaScript securely",
+  "description": "Execute untrusted JavaScript securely",
   "main": "index.js",
+  "files": [
+    "daemon/main.cpp",
+    "scripts/*",
+    "test/*"
+  ],
   "scripts": {
     "test": "mocha"
   },
@@ -19,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/divsense/tight-jail/issues"
   },
-  "homepage": "https://github.com/divsense/tight-jail#readme"
+  "homepage": "https://github.com/divsense/tight-jail#readme",
+  "dependencies": {
+    "byline": "^5.0.0",
+    "fs-extra": "^7.0.0"
+  }
 }
