Implemented module support in browser and native variants
Also added unit tests and began updating documentation

--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -7,6 +7,8 @@
     "daemon/main.cpp",
     "daemon/almost_json_parser.hpp",
     "daemon/almost_json_parser.cpp",
+    "daemon/task_loop.hpp",
+    "daemon/task_loop.cpp",
     "scripts/*",
     "test/*"
   ],
