--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tight-jail",
+  "name": "tight-jail-v8",
   "version": "0.4.0",
   "description": "Execute untrusted JavaScript securely",
   "main": "index.js",
