Alternate attempt to install local module

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.4.0",
   "description": "Meta-package for the different tight-jail implementations",
   "main": "index.js",
+  "scripts": {
+    "postinstall": "npm install nodeonly"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/divsense/tight-jail.git"
@@ -16,8 +19,5 @@
   "bugs": {
     "url": "https://github.com/divsense/tight-jail/issues"
   },
-  "homepage": "https://github.com/divsense/tight-jail#readme",
-  "dependencies": {
-    "tight-jail-nodeonly": "file:./nodeonly"
-  }
+  "homepage": "https://github.com/divsense/tight-jail#readme"
 }
