--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -36,7 +36,8 @@
     "fs-extra": "^7.0.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
-    "yallist": "^3.0.3"
+    "yallist": "^3.0.3",
+    "tmp": "^0.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
