--- a/nodeonly/package.json
+++ b/nodeonly/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
-    "yallist": "^3.0.3"
+    "yallist": "^3.0.3",
+    "tmp": "^0.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
